Bug 258366 - Replied flag is set before the actual reply is sent
Summary: Replied flag is set before the actual reply is sent
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 258389 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-30 12:47 UTC by Bjoern Ricks
Modified: 2011-02-15 19:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2010-11-30 12:47:30 UTC
Version: 4:4.6~20101130.1202227-1maemo1.1202030
Reproducible: Always

Steps to reproduce:
1) Start kmail mobile
2) Select a folder
3) Select a mail
4) Open actions flap
5) Click on reply
6) Click on close and choose discard

From the console I can see a 406 FLAGS (\Seen $REPLIED) debug output directly after clicking on the reply button. Afterwards closing without sending a mail the flag isn't removed and a status icon indicates that a reply was created.

Expected: Replied flag should be set if a reply to an email is sent successfully
Comment 1 Tobias Koenig 2010-12-09 15:09:22 UTC
SVN commit 1204897 by tokoe:

The message is marked as replied/forwarded automatically by
the maildispatcher now, so no need to mark it in advance.

BUG: 258366


 M  +0 -66     kmail/kmcommands.cpp  
 M  +0 -10     mobile/mail/mainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1204897
Comment 2 Volker Krause 2010-12-11 11:59:08 UTC
*** Bug 258389 has been marked as a duplicate of this bug. ***