The message is marked as replied/forwarded automatically by the maildispatcher now, so no need to mark it in advance.

BUG: 258366

svn path=/trunk/KDE/kdepim/kmail/; revision=1204897